# testNAT

./: .gitignore  CMakeLists.txt  README.md
NAT_UDP/: config
NAT_UDP/common/: protocol.h
NAT_UDP/server/: server_message_parser.h
NAT_UDP/windows_client/msys2/: README.txt
UDP_NAT_p2p/: config
UDP_NAT_p2p/Client/: Client.vcxproj
UDP_NAT_p2p/Server/: Server.vcxproj
UdpHoleServer/: config
UdpHoleServer/udp-nat-traversal/: config
